--- a/custom_components/nfl/translations/en.json
+++ b/custom_components/nfl/translations/en.json
@@ -3,6 +3,7 @@
     "step": {
       "user": {
         "data": {
+          "league_id": "League",
           "name": "Friendly Name",
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
@@ -16,6 +17,7 @@
     "step": {
       "init": {
         "data": {
+          "league_id": "League",
           "name": "Friendly Name",
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
