--- a/custom_components/nfl/translations/en.json
+++ b/custom_components/nfl/translations/en.json
@@ -3,7 +3,7 @@
     "step": {
       "user": {
         "data": {
-          "league_id": "League (NFL, NCAAF)",
+          "league_id": "League (MLB, MLS, NCAAF, NFL)",
           "name": "Friendly Name",
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
