--- a/custom_components/nfl/translations/en.json
+++ b/custom_components/nfl/translations/en.json
@@ -3,13 +3,13 @@
     "step": {
       "user": {
         "data": {
-          "league_id": "League (MLB, MLS, NCAAF, NFL)",
+          "league_id": "League (NFL, NCAAF, MLB, NBA, WNBA, NCAAM, NCAAW, MLS, NWSL, BUND, EPL, LIGA)",
           "name": "Friendly Name",
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
         },
         "description": "You can find your 2 or 3-letter acronym on the ESPN NFL page's banner, at the top score strip.",
-        "title": "NFL"
+        "title": "Team Tracker"
       }
     }
   },
@@ -17,13 +17,13 @@
     "step": {
       "init": {
         "data": {
-          "league_id": "League (NFL, NCAAF)",
+          "league_id": "League (NFL, NCAAF, MLB, NBA, WNBA, NCAAM, NCAAW, MLS, NWSL, BUND, EPL, LIGA)",
           "name": "Friendly Name",
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
         },
         "description": "You can find your 2 or 3-letter acronym on the ESPN NFL page's banner, at the top score strip.",
-        "title": "NFL"
+        "title": "Team Tracker"
       }
     }
   }
