--- a/custom_components/nfl/translations/en.json
+++ b/custom_components/nfl/translations/en.json
@@ -7,8 +7,7 @@
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
         },
-        "description": "You can find your 2 or 3-letter acronym on the ESPN NFL page's banner, at the top score strip.",
-        "title": "NFL"
+        "description": "You can find your 2 or 3-letter acronym on the ESPN NFL page's banner, at the top score strip."
       }
     }
   },
@@ -20,8 +19,7 @@
           "team_id": "Team Acronym",
           "timeout": "Update Timeout (in seconds)"
         },
-        "description": "You can find your 2 or 3-letter acronym on the ESPN NFL page's banner, at the top score strip.",
-        "title": "NFL"
+        "description": "You can find your 2 or 3-letter acronym on the ESPN NFL page's banner, at the top score strip."
       }
     }
   }
